<resources>
    <string name="app_name">Futboleta2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="registrarme"><u>Registrarme</u></string>
    <string name="registro">Registro</string>
    <string name="registrar">registrar</string>
    <string name="Miperfil">Mi Perfil</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="perfil">Perfil</string>
    <string name="pirncipal">Principal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="futboleta">Futboleta</string>
    <string name="boleta">Boleta</string>
    <string name="calendario">Calendario</string>
</resources>
