<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mPrincipal"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/pirncipal" />
        <item
            android:id="@+id/mPerfil"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/perfil" />
        <item
            android:id="@+id/mBoleta"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/boleta" />
        <item
            android:id="@+id/mCalendario"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/calendario" />

        <item
            android:id="@+id/mCerrar"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/cerrarsesion" />
    </group>



</menu>
